java 11-ifying